# VeryyyyyyCool2DGameCore

./: .gitignore  CMakeLists.txt  README.md
res/: keys.cfg
src/: animator.h  assetmanager.cpp  assetmanager.h  eventmanager.cpp  eventmanager.h  game.cpp  game.h  main.cpp  utilities.h  window.cpp  window.h
src/gui/: gui.cpp  gui.h  textbox.cpp  textbox.h
src/states/: game_state.cpp  game_state.h  intro_state.cpp  intro_state.h  mainmenu_state.cpp  mainmenu_state.h  pause_state.cpp  pause_state.h  state.h  statemanager.cpp  statemanager.h
